--- a/api_config.json
+++ b/api_config.json
@@ -1,5 +1,5 @@
 {
-  "api_key": "sk-b7873ae7616a4cb88a3224773bbb2e28",
+  "api_key": "sk-",
   "updated_at": "2025-09-04T13:46:57.038561",
   "version": "1.0"
 }
